fix: mobile logo on pages was too big

--- a/src/components/presentational/page/page.css
+++ b/src/components/presentational/page/page.css
@@ -12,6 +12,7 @@
 }
 
 .page__logo {
+	display: block;
 	max-width: 100px;
 }
 
